k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-scraper
  labels:
    name: job-scraper
    app: job-scraper
